@@ -2,7 +2,8 @@ Version 1.23
 ------------
 Multiple bigendian fixes. On little endian systems (for reconnect after
 network failure) fix tcp session reconnect code so we do not try first
-to reconnect on reverse of port 445.
+to reconnect on reverse of port 445. Treat reparse points (NTFS junctions)
+as directories rather than symlinks because we can do follow link on them.
 
 Version 1.22
 ------------
